hash/.svn/pristine/94/946dc7521d1edb7d9e84ae55bf4ce20880294ce9.svn-base
*** RUNNING PRE-TURNIN TESTS ON 2015-09-30 19:04:07 CDT ***
* Language is Java
ERROR compiling source code:
Main.java:76: error: constructor StringTable in class StringTable cannot be applied to given types;
	StringTable table = new StringTable(patternSeq.length());
	                    ^
  required: int,int
  found: int
  reason: actual and formal argument lists differ in length
1 error
